--- a/NuGet.BuildOutput/NuGet.BuildOutput.targets
+++ b/NuGet.BuildOutput/NuGet.BuildOutput.targets
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <UsingTask TaskName="NuGet.PackageDiscovery.ProjectPackageDiscoveryTask" AssemblyFile="$(MSBuildThisFileDirectory)NuGet.PackageDiscovery.dll" />
+  <UsingTask TaskName="NuGet.BuildOutput.ProjectPackageDiscoveryTask" AssemblyFile="$(MSBuildThisFileDirectory)NuGet.BuildOutput.dll" />
 
   <PropertyGroup>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">$(MSBuildProjectDirectory)\..\</SolutionDir>
